force-app/main/default/objects/OB_Amendment__c/fields/Pledgee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pledgee_End_Date__c</fullName>
    <label>Pledgee End Date</label>
    <type>Date</type>
</CustomField>