force-app/main/default/objects/OB_Amendment__c/fields/Pledgee_Name__c.field-meta.xml
<CustomField>
    <fullName>Pledgee_Name__c</fullName>
    <label>Pledgee Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>