force-app/main/default/objects/OB_Amendment__c/fields/Pledgee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pledgee_Start_Date__c</fullName>
    <label>Pledgee Start Date</label>
    <type>Date</type>
</CustomField>