force-app/main/default/objects/OB_Amendment__c/fields/Po_Box_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Po_Box_Postal_Code__c</fullName>
    <label>Po Box/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>