force-app/main/default/objects/OB_Amendment__c/fields/POC_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>POC_Passport_Number__c</fullName>
    <label>POC Passport Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>