force-app/main/default/objects/OB_Amendment__c/fields/PostolCode__c.field-meta.xml
<CustomField>
    <fullName>PostolCode__c</fullName>
    <label>PostolCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>