force-app/main/default/objects/OB_Amendment__c/fields/PPrRegNo__c.field-meta.xml
<CustomField>
    <fullName>PPrRegNo__c</fullName>
    <formula>IF( ISBLANK(Passport_Number__c),  Registration_Number__c , Passport_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPrRegNo</label>
    <type>Text</type>
</CustomField>