force-app/main/default/objects/OB_Amendment__c/fields/Primary_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Code__c</fullName>
    <label>Primary Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>