force-app/main/default/objects/OB_Amendment__c/fields/Provided_Evidence_Document__c.field-meta.xml
<CustomField>
    <fullName>Provided_Evidence_Document__c</fullName>
    <label>Provided Evidence Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>