force-app/main/default/objects/OB_Amendment__c/fields/Provisional_Parent_Key__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Parent_Key__c</fullName>
    <label>Provisional Parent Key(UBO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>