force-app/main/default/objects/OB_Amendment__c/fields/Reason_for_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Exemption__c</fullName>
    <label>Reason for Exemption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>