force-app/main/default/objects/OB_Amendment__c/fields/Recipient_Status__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Status__c</fullName>
    <label>Recipient Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>