force-app/main/default/objects/OB_Amendment__c/fields/Relationship_Account__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>DWC_Account_Registered</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Onboarding_Licensing_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>