force-app/main/default/objects/OB_Amendment__c/fields/RelationShipId__c.field-meta.xml
<CustomField>
    <fullName>RelationShipId__c</fullName>
    <label>RelationShipId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>