force-app/main/default/objects/OB_Amendment__c/fields/Relationships__c.field-meta.xml
<CustomField>
    <fullName>Relationships__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationships</label>
    <referenceTo>Loop__Related_Object__c</referenceTo>
    <relationshipName>Onboarding_Licensing_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>