force-app/main/default/objects/OB_Amendment__c/fields/Residential_Country__c.field-meta.xml
<CustomField>
    <fullName>Residential_Country__c</fullName>
    <label>Country</label>
    <length>200</length>
    <type>Text</type>
</CustomField>