force-app/main/default/objects/OB_Amendment__c/fields/Role_new__c.field-meta.xml
<CustomField>
    <fullName>Role_new__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Freelancer</fullName>
            </value>
            <value>
                <fullName>Legal Representative</fullName>
            </value>
            <value>
                <fullName>Contact Person</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>UBO</fullName>
            </value>
            <value>
                <fullName>PRO</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>