force-app/main/default/objects/OB_Amendment__c/fields/Secondary_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_Number__c</fullName>
    <label>Secondary Mobile Number</label>
    <type>Phone</type>
</CustomField>