force-app/main/default/objects/OB_Amendment__c/fields/Secondary_Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Passport_Expiry_Date__c</fullName>
    <label>Secondary Passport Expiry Date</label>
    <type>Date</type>
</CustomField>