force-app/main/default/objects/OB_Amendment__c/fields/Secondary_Passport_Issuing_country__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Passport_Issuing_country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Passport Issuing Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country__c.Valid_Country__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Onboarding_Licensing_Amendments4</relationshipName>
    <type>Lookup</type>
</CustomField>