force-app/main/default/objects/OB_Amendment__c/fields/Secondary_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Passport_Number__c</fullName>
    <label>Secondary Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>