force-app/main/default/objects/OB_Amendment__c/fields/Secondary_Place_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Place_Of_Issue__c</fullName>
    <label>Secondary Place Of Issue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>