force-app/main/default/objects/OB_Amendment__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>