force-app/main/default/objects/OB_Amendment__c/fields/Share_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Share_Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Share Ownership</label>
    <referenceTo>Share_Ownership__c</referenceTo>
    <relationshipName>Service_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>