force-app/main/default/objects/OB_Amendment__c/fields/Shareholder_Type__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Type__c</fullName>
    <label>Shareholder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>