force-app/main/default/objects/OB_Amendment__c/fields/Shares_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Shares_Transfer_Type__c</fullName>
    <label>Shares Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Shareholder</fullName>
            </value>
            <value>
                <fullName>New Shareholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>