force-app/main/default/objects/OB_Amendment__c/fields/Show_Resend_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Show_Resend_Envelope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Resend Envelope</label>
    <type>Checkbox</type>
</CustomField>