force-app/main/default/objects/OB_Amendment__c/fields/State_Provine_Region__c.field-meta.xml
<CustomField>
    <fullName>State_Provine_Region__c</fullName>
    <label>State/Provine/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>