force-app/main/default/objects/OB_Amendment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>