force-app/main/default/objects/OB_Amendment__c/fields/Status_of_BO_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Status_of_BO_Ownership__c</fullName>
    <label>Status of BO (Ownership %)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>