force-app/main/default/objects/OB_Amendment__c/fields/Stock_Exchange_Government_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange_Government_Entity_Name__c</fullName>
    <label>Stock Exchange / Government Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>