force-app/main/default/objects/OB_Amendment__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>