force-app/main/default/objects/OB_Amendment__c/fields/To_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>To_Shareholder__c</fullName>
    <label>To Shareholder</label>
    <length>250</length>
    <type>Text</type>
</CustomField>