force-app/main/default/objects/OB_Amendment__c/fields/To_Shareholder_Id__c.field-meta.xml
<CustomField>
    <fullName>To_Shareholder_Id__c</fullName>
    <label>To Shareholder Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>