force-app/main/default/objects/OB_Amendment__c/fields/Transfer_Shares_From__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Shares_From__c</fullName>
    <label>Transfer Shares From</label>
    <length>200</length>
    <type>Text</type>
</CustomField>