force-app/main/default/objects/OB_Amendment__c/fields/Type_of_Politically_Exposed_Person__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Politically_Exposed_Person__c</fullName>
    <label>Type of Politically Exposed Person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Head of State or of Government</fullName>
            </value>
            <value>
                <fullName>Senior politician</fullName>
            </value>
            <value>
                <fullName>Senior government official</fullName>
            </value>
            <value>
                <fullName>Judicial (supreme court/head of court of appeal/head of first instance court)</fullName>
            </value>
            <value>
                <fullName>Military official (military rank of Colonel and above)</fullName>
            </value>
            <value>
                <fullName>Member of the ruling family</fullName>
            </value>
            <value>
                <fullName>CEO of a government owned company</fullName>
            </value>
            <value>
                <fullName>CEO of a company linked to the government</fullName>
            </value>
            <value>
                <fullName>Senior political party official</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>