force-app/main/default/objects/OB_Amendment__c/fields/U_I_D_NO__c.field-meta.xml
<CustomField>
    <fullName>U_I_D_NO__c</fullName>
    <label>U.I.D NO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>