force-app/main/default/objects/OB_Amendment__c/fields/UAE_ID__c.field-meta.xml
<CustomField>
    <fullName>UAE_ID__c</fullName>
    <label>UAE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>