force-app/main/default/objects/OB_Amendment__c/fields/UBO_Individual_Email__c.field-meta.xml
<CustomField>
    <fullName>UBO_Individual_Email__c</fullName>
    <label>UBO Individual Email</label>
    <type>Email</type>
</CustomField>