force-app/main/default/objects/OB_Amendment__c/fields/UBO_Individual_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>UBO_Individual_Mobile_Number__c</fullName>
    <label>UBO Individual Mobile Number</label>
    <type>Phone</type>
</CustomField>