force-app/main/default/objects/OB_Amendment__c/fields/UBO_Individual_Name__c.field-meta.xml
<CustomField>
    <fullName>UBO_Individual_Name__c</fullName>
    <label>UBO Individual Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>