force-app/main/default/objects/OB_Amendment__c/fields/UBO_Individual_Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>UBO_Individual_Passport_Expiry_Date__c</fullName>
    <label>UBO Individual Passport Expiry Date</label>
    <type>Date</type>
</CustomField>