force-app/main/default/objects/OB_Amendment__c/fields/UBO_Individual_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>UBO_Individual_Passport_Number__c</fullName>
    <label>UBO Individual Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>