force-app/main/default/objects/OB_Amendment__c/fields/UBO_JSON__c.field-meta.xml
<CustomField>
    <fullName>UBO_JSON__c</fullName>
    <label>UBO JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>