force-app/main/default/objects/OB_Amendment__c/fields/UBO_Node_Details__c.field-meta.xml
<CustomField>
    <fullName>UBO_Node_Details__c</fullName>
    <label>UBO Node Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>