force-app/main/default/objects/OB_Amendment__c/fields/UBO_Node_Order__c.field-meta.xml
<CustomField>
    <fullName>UBO_Node_Order__c</fullName>
    <label>UBO Node Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>