force-app/main/default/objects/OB_Amendment__c/fields/UBO_Node_Path__c.field-meta.xml
<CustomField>
    <fullName>UBO_Node_Path__c</fullName>
    <label>UBO Node Path</label>
    <length>2024</length>
    <type>LongTextArea</type>
</CustomField>