force-app/main/default/objects/OB_Amendment__c/fields/UBO_Node_Status__c.field-meta.xml
<CustomField>
    <fullName>UBO_Node_Status__c</fullName>
    <label>UBO Node Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>