force-app/main/default/objects/OB_Amendment__c/fields/Updating_Section__c.field-meta.xml
<CustomField>
    <fullName>Updating_Section__c</fullName>
    <label>Updating Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
                <label>Personal Details</label>
            </value>
            <value>
                <fullName>PEP</fullName>
                <label>PEP Details</label>
            </value>
            <value>
                <fullName>Passport</fullName>
                <label>Passport Information</label>
            </value>
            <value>
                <fullName>ContactInfo</fullName>
                <label>Contact Information</label>
            </value>
            <value>
                <fullName>Address</fullName>
                <label>Address Information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>