force-app/main/default/objects/OB_Amendment__c/fields/When_this_individual_became_UBO__c.field-meta.xml
<CustomField>
    <fullName>When_this_individual_became_UBO__c</fullName>
    <label>When this individual became UBO</label>
    <type>Date</type>
</CustomField>