force-app/main/default/objects/OB_Amendment__c/recordTypes/Company_Registration_Individual.recordType-meta.xml
<RecordType>
    <fullName>Company_Registration_Individual</fullName>
    <active>true</active>
    <label>Company Registration Individual</label>
</RecordType>