force-app/main/default/objects/OB_Amendment__c/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <description>Corporate</description>
    <label>Corporate</label>
</RecordType>