force-app/main/default/objects/OB_Amendment__c/recordTypes/Government_Listed_on_Stock_Exchange.recordType-meta.xml
<RecordType>
    <fullName>Government_Listed_on_Stock_Exchange</fullName>
    <active>true</active>
    <label>Government / Listed on Stock Exchange</label>
</RecordType>