force-app/main/default/objects/OB_Amendment__c/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <description>Individual</description>
    <label>Individual</label>
</RecordType>