force-app/main/default/objects/OB_Amendment__c/recordTypes/Individual_With_Shares_Details.recordType-meta.xml
<RecordType>
    <fullName>Individual_With_Shares_Details</fullName>
    <active>true</active>
    <description>Shares Details</description>
    <label>Individual With Shares Details</label>
</RecordType>