force-app/main/default/objects/OB_Amendment__c/recordTypes/Others.recordType-meta.xml
<RecordType>
    <fullName>Others</fullName>
    <active>true</active>
    <description>Others</description>
    <label>Others</label>
</RecordType>