force-app/main/default/objects/OB_Amendment__c/listViews/Registration_And_Licensing_team_OB_Amendment.listView-meta.xml
<ListView>
    <fullName>Registration_And_Licensing_team_OB_Amendment</fullName>
    <filterScope>Queue</filterScope>
    <label>Registration And Licensing team</label>
    <queue>Registration_And_Licensing_team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>